[FIX] website_snippet_big_button: Wrap big buttons content
Without this patch, a big button with a lot of content will fail to
render properly in phones.

--- a/website_snippet_big_button/static/src/scss/website_snippet_big_button.scss
+++ b/website_snippet_big_button/static/src/scss/website_snippet_big_button.scss
@@ -2,14 +2,20 @@
 // Copyright 2019 Tecnativa - Cristina Martin R.
 // License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html).
 
-.big-buttons a {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-
-    > .d-block {
+.big-buttons {
+    .btn {
         white-space: normal;
+    }
+
+    a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        > .d-block {
+            white-space: normal;
+        }
     }
 }
